--- a/src/components/imageContainer/resultDisplay.css
+++ b/src/components/imageContainer/resultDisplay.css
@@ -1,9 +1,9 @@
-.heatmap-display {
+.result-display {
   position: relative;
   overflow: hidden;
 }
 
-.heatmap-display .original {
+.result-display .original {
   position: absolute;
   top: 0;
   left: 0;
@@ -13,7 +13,7 @@
   user-select: none;
 }
 
-.heatmap-display .slider {
+.result-display .slider {
   position: absolute;
   right: 0;
   top: 50%;
@@ -30,7 +30,7 @@
   justify-content: center;
 }
 
-.heatmap-display .result {
+.result-display .result {
   position: absolute;
   top: 0;
   left: 0;
@@ -38,6 +38,9 @@
   width: 100%;
   height: 100%;
   user-select: none;
+}
+
+.result-display .result.heatmap {
   opacity: 0;
   animation: fadeIn 5s forwards;
 }
