--- a/src/index.css
+++ b/src/index.css
@@ -9,30 +9,33 @@
 :root {
   --main-color: #ff4321;
   --secondary-color: orange;
-  --white-background: white;
+  --secondary-color: #4158a6;
   --background-color: #eeeeee;
-  /* --gray-background: #eee;*/
-  --link-color: black;
   --color-nav: #424040;
+  --background-srv: #e4dcc485;
+  --pargraph: #424040;
+  --contact: #00304985;
 }
 
 body[data-theme="dark"] {
   --background-color: #030f19;
-  --white-background: #030f19;
-  background-color: #030f19;
-  /* --gray-background: #222;*/
-  --link-color: #eee;
-  --color-nav: white;
-  --main-color: #ca4410;
   color: white;
+  --color-nav: white;
+  background-color: #030f19;
+  --main-color: #ca4410;
+  --background-srv: #ff713a00;
+  --contact: #000000ad;
+  --about: white;
 }
 
 ::-webkit-scrollbar {
   width: 10px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-track {
   background-color: transparent;
+  color: transparent;
 }
 ::-webkit-scrollbar-thumb {
   background-color: var(--main-color);
@@ -47,8 +50,16 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
-  position: relative;
+  /* position: relative; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
 }
