--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,13 +1,10 @@
 header {
-  /* position: sticky;*/
-  top: 0;
-  left: 0;
   background: var(--background-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 25px;
-  max-width: 100%;
+  /* max-width: 100%; */
   margin-bottom: 2px;
   z-index: 10;
   box-shadow: 0px 0 1px white;
@@ -70,6 +67,7 @@ header {
   }
 }
 
+/* logo */
 .img {
   width: 80px;
   display: flex;
@@ -87,7 +85,7 @@ header {
   }
 }
 
-ul {
+.lg-links {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -95,7 +93,7 @@ ul {
   flex: 1;
 }
 
-ul li {
+.lg-links li {
   list-style: none;
 
   i {
@@ -179,11 +177,6 @@ ul li {
 }
 
 @media (max-width: 990px) {
-  /*header {
-        padding: 0px;
-        margin: 20px 18px;
-    }*/
-
   ul {
     gap: 20px;
   }
@@ -212,11 +205,6 @@ ul li {
 }
 
 @media (max-width: 768px) {
-  /* header {
-        padding: 0px;
-        margin: 20px 18px;
-    }*/
-
   .menu {
     display: block;
   }
@@ -235,4 +223,37 @@ ul li {
       font-size: 15px;
     }
   }
+}
+
+.theme-container {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 0px;
+  padding-left: 10px;
+  transition: all 0.3s linear;
+  border: 2px solid rgba(62, 57, 57, 0.571);
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 20px;
+  cursor: pointer;
+  box-shadow: inset 0px 0px 4px gray;
+}
+
+.theme {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 2px;
+  transition: all 0.3s;
+}
+
+.fa-sun.move {
+  transform: translate(20px, 0px) rotate(360deg);
+}
+
+.fa-moon.move {
+  transform: translate(0px, 0px) rotate(-360deg);
 }
