--- a/src/components/model/imageContainer/ImageContainer.css
+++ b/src/components/model/imageContainer/ImageContainer.css
@@ -3,11 +3,14 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  min-width: 512px;
+  align-items: center;
 
   .info {
     display: flex;
     align-items: center;
     gap: 8px;
+    align-self: flex-start;
 
     span {
       background-color: var(--main-color);
