--- a/src/components/model/button/generateButton.css
+++ b/src/components/model/button/generateButton.css
@@ -1,5 +1,5 @@
 .button {
-  background-color: var(--main-color);
+  background-color: var(--purple);
   border: none;
   outline: none;
   color: #f0f0f0;
