--- a/src/components/home/about/about.css
+++ b/src/components/home/about/about.css
@@ -3,14 +3,14 @@
   padding-right: 60px;
   margin-left: auto;
   margin-right: auto;
-  background-color: var(--background-color);
+  background: var(--background-color);
   padding-bottom: 50px;
   padding-top: 50px;
   text-align: center;
   position: relative;
 
   h1 {
-    color: var(--secondary-color);
+    color: var(--words);
     font-size: 48px;
     margin: 10px auto;
     margin-bottom: 50px;
@@ -29,7 +29,7 @@
 
       h2 {
         margin-bottom: 35px;
-        color: var(--main-color);
+        color: var(--DarkPurple);
       }
 
       .one {
@@ -42,7 +42,7 @@
       hr {
         width: 50%;
         display: inline-block;
-        border-color: var(--main-color);
+        border-color: var(--pink);
         margin-bottom: 39px;
       }
 
@@ -60,9 +60,9 @@
         height: 53px;
         text-align: center;
         padding: 13px 17px;
-        border: 2px solid var(--main-color);
+        border: 2px solid var(--purple);
         border-radius: 6px;
-        color: var(--main-color);
+        color: var(--pink);
         font-weight: 600;
         font-size: 16px;
         cursor: pointer;
@@ -72,7 +72,7 @@
 
       button:hover {
         transform: scale(1.1);
-        box-shadow: 0rem 0rem 1.3rem var(--main-color);
+        box-shadow: 0rem 0rem 1.3rem var(--purple);
       }
     }
   }
