--- a/src/components/home/contact/contact.css
+++ b/src/components/home/contact/contact.css
@@ -4,78 +4,94 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
   overflow: hidden;
-  background: url(../../../assets/photo_2024-08-19_04-44-35.jpg) no-repeat
-    center/cover;
+  background: var(--back);
 
-  .continer {
-    padding: 0px 60px;
+  .box {
+    backdrop-filter: blur(20px);
+    background: #ffffff66;
+    width: 83%;
+    border-radius: 15px;
+    background-color: rgb(255, 255, 255, 0.45);
+    box-shadow: 0px 0.5rem 1rem #aaaaaa;
+    height: 78%;
+    padding-top: 20px;
+    background: transparent;
+    border: 2px solid var(--purple);
+    background: var(--ground);
+    /* لون الخلفية */
+    -webkit-backdrop-filter: blur(20px);
 
-    .logo {
-      position: relative;
-      z-index: 2;
-      display: flex;
-      justify-content: space-around;
-      align-items: baseline;
+    .continer {
+      padding: 0px 60px;
 
-      .big {
-        .imlogo {
-          display: flex;
-          margin-left: 98px;
+      .logo {
+        position: relative;
+        z-index: 2;
+        display: flex;
+        justify-content: space-around;
+        align-items: baseline;
 
-          img {
-            width: 60px;
+        .big {
+          .imlogo {
+            display: flex;
+            margin-left: 98px;
+
+            img {
+              width: 60px;
+            }
+
+            span {
+              margin-top: 17px;
+              margin-left: 14px;
+              font-size: 21px;
+            }
           }
 
-          span {
-            margin-top: 17px;
-            margin-left: 14px;
-            font-size: 21px;
-          }
-        }
+          .copy {
+            p {
+              padding: 56px;
+              width: 56%;
+            }
 
-        .copy {
-          p {
-            padding: 56px;
-            width: 56%;
-          }
+            .icons {
+              text-align: start;
+              margin-left: 72px;
 
-          .icons {
-            text-align: start;
-            margin-left: 72px;
-
-            i {
-              font-size: 30px;
-              margin: 0 10px;
+              i {
+                font-size: 30px;
+                margin: 0 10px;
+                color: var(--purple);
+              }
             }
           }
         }
-      }
 
-      .service {
-        display: flex;
-        flex-direction: column;
-        text-align: justify;
-        gap: 43px;
-        width: 29%;
-
-        .head {
+        .service {
           display: flex;
+          flex-direction: column;
+          text-align: justify;
+          gap: 43px;
+          width: 29%;
 
-          i {
-            border-radius: 50%;
-            font-size: 17px;
-            margin-right: 5px;
+          .head {
+            display: flex;
+
+            i {
+              border-radius: 50%;
+              font-size: 17px;
+              margin-right: 5px;
+              color: var(--purple);
+            }
           }
-        }
 
-        .email,
-        .address {
-          .small {
-            font-size: 12px;
-            margin-left: 35px;
-            color: #f98345;
+          .email,
+          .address {
+            .small {
+              font-size: 12px;
+              margin-left: 35px;
+              color: var(--words);
+            }
           }
         }
       }
@@ -169,7 +185,7 @@ footer::before {
 }
 
 .footer {
-  background-color: #1f456f;
+  background: var(--purple);
   color: white;
   padding: 15px 10px;
   text-align: center;
