--- a/src/components/home/services/services.css
+++ b/src/components/home/services/services.css
@@ -5,8 +5,8 @@
   padding-right: 60px;
 
   h1 {
+    color: var(--words);
     font-size: 53px;
-    color: var(--secondary-color);
   }
 
   .group {
@@ -18,26 +18,24 @@
     margin: 0 auto;
 
     .srv {
-      background: var(--background-srv);
       backdrop-filter: blur(10px);
-      border: 2px solid rgba(255, 255, 255, 0.1);
+      border: 2px solid var(--purple);
       border-radius: 10px;
       padding: 20px;
       text-align: start;
       flex: 1;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+      box-shadow: 0px 0.5rem 1rem #808080b0;
       max-width: 300px;
-      opacity: 1;
       transform: translateY(50px);
       transition: opacity 0.5s ease-out, transform 0.5s ease-out;
       /*
-                border: 2px solid var(--main-color);
+                border: 2px solid var(--gradient);
                 display: flex;
                 flex-direction: column;
                 align-items: flex-start;
                 padding: 30px 20px;
                 border-radius: 20px;
-                background-color: rgb(255, 255, 255, 0.45);
+                background: rgb(255, 255, 255, 0.45);
                 backdrop-filter: blur(10px);*/
 
       i {
@@ -48,11 +46,13 @@
 
       h2 {
         margin: 20px;
+        font-family: sans-serif;
       }
 
       p {
         text-align: start;
         margin: 20px;
+        font-family: system-ui;
       }
 
       a {
@@ -61,14 +61,14 @@
         justify-content: start;
         text-decoration: none;
         font-weight: 700;
-        color: var(--main-color);
+        color: var(--DarkPurple);
         font-size: 15px;
         /*margin-bottom: 30px;
                 margin-top: 3%;
                 width: 159px;
                 height: 53px;
                 padding: 13px 17px;
-                background-color: var(--main-color);
+                background: var(--gradient);
                 border-radius: 6px;
                 color: white;
                 font-weight: 600;
@@ -93,13 +93,23 @@
         i {
           margin: 0px 9px;
           margin-top: 8px;
-          color: var(--main-color);
+          color: var(--gradient);
           font-size: 15px;
           /*
                     color: black;
                     color: #ffffff;
                     margin: auto;
                     font-size: larger;*/
+        }
+      }
+
+      .btns {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .learn {
+          text-decoration: underline;
         }
       }
     }
@@ -112,7 +122,7 @@
     .srv:hover {
       transform: scale(1.1);
       transition: all 0.3s linear;
-      border: 2px solid rgba(255, 166, 0, 0.4);
+      border: 2px solid var(--purple);
     }
   }
 }
