--- a/src/components/model/heatmap/heatmap.css
+++ b/src/components/model/heatmap/heatmap.css
@@ -5,7 +5,7 @@
   transform: translate(-50%, -50%);
   width: 1.5px;
   height: 80%;
-  background: var(--main-color);
+  background: var(--purple);
   display: block;
 }
 
