--- a/src/components/model/imageContainer/ImageContainer.css
+++ b/src/components/model/imageContainer/ImageContainer.css
@@ -13,7 +13,7 @@
     align-self: flex-start;
 
     span {
-      background-color: var(--main-color);
+      background-color: var(--purple);
       color: white;
       padding: 3px 8px;
 
@@ -21,7 +21,7 @@
     }
 
     .icon {
-      background-color: var(--main-color);
+      background-color: var(--purple);
       padding: 5px;
       color: white;
       border-radius: 3px;
