--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,13 +1,16 @@
 header {
-  background: var(--background-color);
+  /* position: sticky;*/
+  top: 0;
+  left: 0;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 25px;
-  /* max-width: 100%; */
+  max-width: 100%;
   margin-bottom: 2px;
   z-index: 10;
-  box-shadow: 0px 0 1px white;
+  box-shadow: 0px -0.5rem 1rem rgb(123, 120, 120);
 }
 
 .links {
@@ -62,12 +65,11 @@ header {
   }
 
   .btn1:hover {
-    background: var(--main-color);
+    background: var(--gradient);
     color: white;
   }
 }
 
-/* logo */
 .img {
   width: 80px;
   display: flex;
@@ -79,7 +81,7 @@ header {
   }
 
   span {
-    color: var(--main-color);
+    color: var(--purple);
     font-weight: 700;
     font-size: 20px;
   }
@@ -98,7 +100,7 @@ header {
 
   i {
     margin-right: 7px;
-    color: var(--color-nav);
+    color: var(--purple);
   }
 
   #conn {
@@ -114,7 +116,7 @@ header {
   }
 
   a:hover {
-    color: var(--main-color);
+    color: var(--pink);
   }
 }
 
@@ -127,9 +129,9 @@ header {
 .btn1 {
   width: 130px;
   height: 45px;
-  border: 2px solid var(--main-color);
+  border: 2px solid var(--gradient);
   border-radius: 32px;
-  background: var(--main-color);
+  background: var(--gradient);
   color: white;
   font-size: 19px;
   cursor: pointer;
@@ -137,15 +139,15 @@ header {
 }
 
 .btn1:hover {
-  box-shadow: 0rem 0rem 1.3rem var(--main-color);
+  box-shadow: 0rem 0rem 1.7rem var(--purple);
   transition: all 0.3s ease-in-out;
   transform: scale(1.1);
 }
 
 .btn {
   background-color: transparent;
-  color: var(--main-color);
-  border: 2px solid var(--main-color);
+  color: var(--gradient);
+  border: 2px solid var(--purple);
   font-size: 19px;
   width: 130px;
   height: 45px;
@@ -155,7 +157,7 @@ header {
 }
 
 .btn:hover {
-  box-shadow: 0rem 0rem 1.3rem var(--main-color);
+  box-shadow: 0rem 0rem 1.7rem var(--purple);
   transition: all 0.3s ease-in-out;
   transform: scale(1.1);
 }
@@ -165,7 +167,7 @@ header {
     gap: 4px;
   }
 
-  ul {
+  .lg-links {
     gap: 33px;
     margin-left: 65px;
     margin-right: 0px;
@@ -177,7 +179,12 @@ header {
 }
 
 @media (max-width: 990px) {
-  ul {
+  /*header {
+        padding: 0px;
+        margin: 20px 18px;
+    }*/
+
+  .lg-links {
     gap: 20px;
   }
 
@@ -205,6 +212,11 @@ header {
 }
 
 @media (max-width: 768px) {
+  /* header {
+        padding: 0px;
+        margin: 20px 18px;
+    }*/
+
   .menu {
     display: block;
   }
