--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,29 @@
-*,
-*::after,
-*::before {
+* {
   margin: 0;
   padding: 0;
 }
 
 :root {
-  --main-color: #ff4321;
-  --secondary-color: orange;
-  --secondary-color: #4158a6;
-  --background-color: #eeeeee;
+  --words: #6d04b9;
+  --purple: #7406c2;
+  --pink: #c709fc;
+  --gradient: linear-gradient(100deg, var(--purple), var(--pink));
   --color-nav: #424040;
-  --background-srv: #e4dcc485;
-  --pargraph: #424040;
-  --contact: #00304985;
+  --back: #eeeeee;
+  --ground: rgb(255, 255, 255, 0.45);
+  --background: linear-gradient(90deg, var(--back), var(--ground));
+  --DarkPurple: rgb(88, 22, 195);
 }
 
 body[data-theme="dark"] {
-  --background-color: #030f19;
+  --back: #030f19;
+  --ground: #030f19;
+  background-color: #030f19;
   color: white;
   --color-nav: white;
   background-color: #030f19;
-  --main-color: #ca4410;
-  --background-srv: #ff713a00;
-  --contact: #000000ad;
-  --about: white;
+  --DarkPurple: rgb(170 118 255);
 }
-
 ::-webkit-scrollbar {
   width: 10px;
   background-color: transparent;
@@ -37,7 +34,7 @@ body[data-theme="dark"] {
   color: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--main-color);
+  background-color: var(--purple);
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
@@ -54,9 +51,12 @@ a {
 }
 
 body {
-  /* position: relative; */
+  background-color: white;
+  color: black;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+  font-style: normal;
 }
 
 html {
