--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,4 @@
-header {
+nav {
   /* position: sticky;*/
   top: 0;
   left: 0;
@@ -13,7 +13,162 @@ header {
   box-shadow: 0px -0.5rem 1rem rgb(123, 120, 120);
 }
 
-.links {
+nav .img {
+  width: 80px;
+  display: flex;
+  align-items: center;
+  margin-right: 68px;
+
+  img {
+    width: 100%;
+  }
+
+  span {
+    color: var(--purple);
+    font-weight: 700;
+    font-size: 20px;
+  }
+}
+
+nav .lg-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 70px;
+  flex: 1;
+}
+
+nav .lg-links li {
+  list-style: none;
+
+  i {
+    margin-right: 7px;
+    color: var(--purple);
+  }
+
+  #conn {
+    transform: rotate(-24deg);
+  }
+
+  a {
+    text-decoration: none;
+    text-transform: capitalize;
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--color-nav);
+  }
+
+  a:hover {
+    color: var(--pink);
+  }
+}
+
+nav .lg-links .theme-container {
+  position: relative;
+  display: inline-block;
+  margin-bottom: 0px;
+  padding-left: 10px;
+  transition: all 0.3s linear;
+  border: 2px solid rgba(62, 57, 57, 0.571);
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 20px;
+  cursor: pointer;
+  box-shadow: inset 0px 0px 4px gray;
+}
+
+nav .lg-links .theme-container .theme {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 2px;
+  transition: all 0.3s;
+}
+
+nav .lg-links .theme-container .fa-sun.move {
+  transform: translate(20px, 0px) rotate(360deg);
+}
+
+nav .lg-links .theme-container .fa-moon.move {
+  transform: translate(0px, 0px) rotate(-360deg);
+}
+
+nav .buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+nav .buttons button {
+  border: 2px solid var(--gradient);
+  border-radius: 32px;
+  padding: 10px 35px;
+  background: var(--gradient);
+  color: white;
+  font-size: 19px;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+
+nav .buttons .signup {
+  background: transparent;
+  color: var(--purple);
+  border: 2px solid var(--purple);
+}
+
+nav .buttons button:hover {
+  box-shadow: 0rem 0rem 1.7rem var(--purple);
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.1);
+}
+
+@media (max-width: 1200px) {
+  nav .buttons {
+    gap: 4px;
+  }
+
+  nav .lg-links {
+    gap: 33px;
+    margin-left: 65px;
+    margin-right: 0px;
+
+    li {
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 990px) {
+  nav .lg-links {
+    gap: 20px;
+  }
+
+  nav .buttons {
+    gap: 8px;
+  }
+
+  nav .img {
+    width: 63px;
+
+    span {
+      font-size: 12px;
+    }
+  }
+}
+
+@media (max-width: 350px) {
+  nav .img {
+    width: 60px;
+    span {
+      font-size: 15px;
+    }
+  }
+}
+
+nav .links {
   position: fixed;
   top: 0;
   right: 0;
@@ -70,202 +225,17 @@ header {
   }
 }
 
-.img {
-  width: 80px;
-  display: flex;
-  align-items: center;
-  margin-right: 68px;
-
-  img {
-    width: 100%;
-  }
-
-  span {
-    color: var(--purple);
-    font-weight: 700;
-    font-size: 20px;
-  }
-}
-
-.lg-links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 70px;
-  flex: 1;
-}
-
-.lg-links li {
-  list-style: none;
-
-  i {
-    margin-right: 7px;
-    color: var(--purple);
-  }
-
-  #conn {
-    transform: rotate(-24deg);
-  }
-
-  a {
-    text-decoration: none;
-    text-transform: capitalize;
-    font-size: 16px;
-    font-weight: 600;
-    color: var(--color-nav);
-  }
-
-  a:hover {
-    color: var(--pink);
-  }
-}
-
-.buttons {
-  display: flex;
-  justify-content: space-between;
-  gap: 30px;
-}
-
-.btn1 {
-  width: 130px;
-  height: 45px;
-  border: 2px solid var(--gradient);
-  border-radius: 32px;
-  background: var(--gradient);
-  color: white;
-  font-size: 19px;
-  cursor: pointer;
-  transition: all 0.3s linear;
-}
-
-.btn1:hover {
-  box-shadow: 0rem 0rem 1.7rem var(--purple);
-  transition: all 0.3s ease-in-out;
-  transform: scale(1.1);
-}
-
-.btn {
-  background-color: transparent;
-  color: var(--gradient);
-  border: 2px solid var(--purple);
-  font-size: 19px;
-  width: 130px;
-  height: 45px;
-  border-radius: 32px;
-  cursor: pointer;
-  transition: all 0.3s linear;
-}
-
-.btn:hover {
-  box-shadow: 0rem 0rem 1.7rem var(--purple);
-  transition: all 0.3s ease-in-out;
-  transform: scale(1.1);
-}
-
-@media (max-width: 1200px) {
-  .buttons {
-    gap: 4px;
-  }
-
-  .lg-links {
-    gap: 33px;
-    margin-left: 65px;
-    margin-right: 0px;
-
-    li {
-      text-align: center;
-    }
-  }
-}
-
-@media (max-width: 990px) {
-  /*header {
-        padding: 0px;
-        margin: 20px 18px;
-    }*/
-
-  .lg-links {
-    gap: 20px;
-  }
-
-  .buttons {
-    gap: 8px;
-
-    .btn1,
-    .btn {
-      width: 120px;
-      height: 39px;
-    }
-  }
-
-  .img {
-    width: 63px;
-
-    span {
-      font-size: 12px;
-    }
-  }
-}
-
-.menu {
+nav .lg-links .menu {
   display: none;
 }
 
 @media (max-width: 768px) {
-  /* header {
-        padding: 0px;
-        margin: 20px 18px;
-    }*/
-
-  .menu {
+  nav .lg-links .menu {
     display: block;
   }
 
-  .buttons,
-  .active {
+  nav .buttons,
+  nav .lg-links .active {
     display: none;
   }
-}
-
-@media (max-width: 350px) {
-  .img {
-    width: 60px;
-
-    span {
-      font-size: 15px;
-    }
-  }
-}
-
-.theme-container {
-  position: relative;
-  display: inline-block;
-  margin-bottom: 0px;
-  padding-left: 10px;
-  transition: all 0.3s linear;
-  border: 2px solid rgba(62, 57, 57, 0.571);
-  border-radius: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 32px;
-  height: 20px;
-  cursor: pointer;
-  box-shadow: inset 0px 0px 4px gray;
-}
-
-.theme {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 2px;
-  transition: all 0.3s;
-}
-
-.fa-sun.move {
-  transform: translate(20px, 0px) rotate(360deg);
-}
-
-.fa-moon.move {
-  transform: translate(0px, 0px) rotate(-360deg);
 }
