--- a/src/components/home/services/services.css
+++ b/src/components/home/services/services.css
@@ -1,4 +1,4 @@
-.serv {
+.services {
   text-align: center;
   padding-top: 20px;
   padding-left: 60px;
@@ -26,18 +26,7 @@
       flex: 1;
       box-shadow: 0px 0.5rem 1rem #808080b0;
       max-width: 300px;
-      transform: translateY(50px);
       transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-      /*
-                border: 2px solid var(--gradient);
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                padding: 30px 20px;
-                border-radius: 20px;
-                background: rgb(255, 255, 255, 0.45);
-                backdrop-filter: blur(10px);*/
-
       i {
         text-align: start;
         margin: 0px 34px;
@@ -63,24 +52,6 @@
         font-weight: 700;
         color: var(--DarkPurple);
         font-size: 15px;
-        /*margin-bottom: 30px;
-                margin-top: 3%;
-                width: 159px;
-                height: 53px;
-                padding: 13px 17px;
-                background: var(--gradient);
-                border-radius: 6px;
-                color: white;
-                font-weight: 600;
-                font-size: 16px;
-                border: none;
-                cursor: pointer;
-                transition: all 0.3s linear;
-                margin-right: 5px;
-                text-align: center;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;*/
 
         span {
           margin-left: 7px;
@@ -95,11 +66,6 @@
           margin-top: 8px;
           color: var(--gradient);
           font-size: 15px;
-          /*
-                    color: black;
-                    color: #ffffff;
-                    margin: auto;
-                    font-size: larger;*/
         }
       }
 
@@ -114,25 +80,14 @@
       }
     }
 
-    .fade-in {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
     .srv:hover {
-      transform: scale(1.1);
+      transform: scale(1.1) translateY(-10px);
       transition: all 0.3s linear;
       border: 2px solid var(--purple);
     }
   }
 }
 
-.serv .group .srv .Btn i:hover {
+.services .group .srv .Btn i:hover {
   margin-right: 20px;
-}
-
-@media (max-width: 768px) {
-  .serv .containerServ .group {
-    grid-template-columns: repeat(auto-fit, minmax(245px, 1fr));
-  }
 }
