--- a/src/components/home/contact/contact.css
+++ b/src/components/home/contact/contact.css
@@ -1,186 +1,92 @@
 footer {
   width: 100%;
-  height: 58vh;
   display: flex;
   justify-content: center;
   align-items: center;
   overflow: hidden;
   background: var(--back);
-
-  .box {
-    backdrop-filter: blur(20px);
-    background: #ffffff66;
-    width: 83%;
-    border-radius: 15px;
-    background-color: rgb(255, 255, 255, 0.45);
-    box-shadow: 0px 0.5rem 1rem #aaaaaa;
-    height: 78%;
-    padding-top: 20px;
-    background: transparent;
-    border: 2px solid var(--purple);
-    background: var(--ground);
-    /* لون الخلفية */
-    -webkit-backdrop-filter: blur(20px);
-
-    .continer {
-      padding: 0px 60px;
-
-      .logo {
-        position: relative;
-        z-index: 2;
-        display: flex;
-        justify-content: space-around;
-        align-items: baseline;
-
-        .big {
-          .imlogo {
-            display: flex;
-            margin-left: 98px;
-
-            img {
-              width: 60px;
-            }
-
-            span {
-              margin-top: 17px;
-              margin-left: 14px;
-              font-size: 21px;
-            }
-          }
-
-          .copy {
-            p {
-              padding: 56px;
-              width: 56%;
-            }
-
-            .icons {
-              text-align: start;
-              margin-left: 72px;
-
-              i {
-                font-size: 30px;
-                margin: 0 10px;
-                color: var(--purple);
-              }
-            }
-          }
-        }
-
-        .service {
-          display: flex;
-          flex-direction: column;
-          text-align: justify;
-          gap: 43px;
-          width: 29%;
-
-          .head {
-            display: flex;
-
-            i {
-              border-radius: 50%;
-              font-size: 17px;
-              margin-right: 5px;
-              color: var(--purple);
-            }
-          }
-
-          .email,
-          .address {
-            .small {
-              font-size: 12px;
-              margin-left: 35px;
-              color: var(--words);
-            }
-          }
-        }
-      }
-    }
-  }
 }
 
-footer::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 59%;
-  background: var(--contact);
-  justify-content: center;
-  align-items: center;
-  border-radius: var(--radius);
-  cursor: pointer;
-  transition: all 0.3s ease;
-  opacity: 1;
-  left: 0;
+footer .continer {
+  width: 90%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+  row-gap: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
-@media (max-width: 768px) {
-  footer {
-    height: 100%;
-  }
-
-  footer::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 83%;
-    background-color: #00304985;
-    justify-content: center;
+footer .continer .big {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  .imlogo {
+    flex: 1;
+    display: flex;
+    gap: 10px;
     align-items: center;
-    border-radius: var(--radius);
-    cursor: pointer;
-    transition: all 0.3s ease;
-    opacity: 1;
-    left: 1px;
-  }
-
-  footer .continer .logo {
-    flex-wrap: wrap;
-  }
-
-  footer .continer .logo .big {
-    margin-bottom: 37px;
-  }
-
-  footer .continer .logo .big .imlogo {
-    margin-left: 0px;
-  }
-
-  footer .continer .logo .big .copy p {
-    width: 100%;
-    padding: 56px 56px 33px 0px;
-  }
-
-  footer .continer .logo .big .copy .icons {
-    margin-left: 0px;
-  }
-
-  footer .continer .logo .big .copy .icons i {
-    font-size: 23px;
-  }
-
-  footer .continer .logo .service {
-    grid-area: 25px;
-    margin-bottom: 34px;
-
-    h3 {
-      font-size: 15px;
+    img {
+      width: 60px;
     }
-
-    .head span {
-      font-size: 12px;
+    span {
+      font-size: 21px;
     }
+  }
 
-    .email,
-    .address {
-      p {
-        font-size: 11px;
-      }
-
-      .small {
-        margin-left: 5px;
-      }
+  .copy {
+    width: 80%;
+    min-width: 304px;
+    p {
+      line-height: 1.5;
     }
+  }
+
+  .icons {
+    text-align: start;
+    display: flex;
+    gap: 20px;
+
+    i {
+      font-size: 30px;
+      color: var(--purple);
+    }
+  }
+}
+
+footer .continer .service {
+  h3 {
+    margin-bottom: 25px;
+  }
+
+  .head {
+    display: flex;
+    gap: 10px;
+    margin-top: 15px;
+    i {
+      color: var(--purple);
+    }
+    .small {
+      font-size: 14px;
+    }
+  }
+}
+
+@media (max-width: 1180px) {
+  footer .continer {
+    grid-template-columns: 2fr 1fr 1fr;
+  }
+}
+
+@media (max-width: 850px) {
+  footer .continer {
+    grid-template-columns: 2fr 1fr;
+  }
+}
+
+@media (max-width: 650px) {
+  footer .continer {
+    grid-template-columns: 1fr;
   }
 }
 
@@ -190,10 +96,10 @@ footer::before {
   padding: 15px 10px;
   text-align: center;
   font-size: 20px;
-  border-top: 5px solid white;
 
   span {
     font-weight: bold;
     color: black;
+    margin-right: 5px;
   }
 }
