--- a/src/components/model/selectImage/selectImage.css
+++ b/src/components/model/selectImage/selectImage.css
@@ -1,6 +1,6 @@
 .upload {
-  width: 512px;
-  height: 512px;
+  width: 500px;
+  height: 450px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,6 +18,13 @@
     cursor: pointer;
   }
 
+  .upload-text {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    text-align: center;
+  }
   p {
     font-size: 25px;
     font-style: italic;
