--- a/src/pages/recommendations/recommendations.css
+++ b/src/pages/recommendations/recommendations.css
@@ -1,6 +1,5 @@
 .recommend .head {
   color: black;
-  padding: 20px;
   display: flex;
   justify-content: center;
   padding-top: 45px;
@@ -10,7 +9,9 @@
 
   .group {
     text-align: center;
-    max-width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     color: black;
     border: 2px solid rgba(137, 135, 135, 0.5);
     border-radius: 10px;
@@ -27,6 +28,11 @@
     margin-bottom: 10px;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
       sans-serif;
+  }
+
+  p {
+    max-width: 70%;
+    text-align: center;
   }
 }
 
@@ -56,25 +62,21 @@
 
   li {
     cursor: pointer;
-    transition: all 0.3s linear;
+    transition: background-image 0.3s linear, box-shadow 0.3s linear;
     padding: 10px;
     font-size: 14px;
-  }
-
-  li:active {
-    transform: translateY(-1px);
+    text-align: center;
   }
 
   li:hover {
-    background: var(--gradient);
+    background-image: var(--gradient);
     color: white;
     border-radius: 10px;
     box-shadow: 0px 0.5rem 1rem rgba(0, 0, 0, 0.5);
   }
 
   li.active {
-    background: var(--gradient);
-    border: 2px solid var(--words);
+    background-image: var(--gradient);
     color: white;
     border-radius: 10px;
     box-shadow: 0px 0.5rem 1rem rgba(0, 0, 0, 0.5);
@@ -130,28 +132,18 @@
   }
 }
 
-.recommend .content.active {
-  display: block;
-}
-
-.recommend #con1.active {
-  display: none;
-}
-
 .recommend .img {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-around;
 
   .before,
   .after {
+    position: relative;
     width: 300px;
 
-    padding-bottom: 20px;
-    margin-left: 30px;
-
     img {
-      max-width: 100%;
+      width: 100%;
     }
   }
 }
@@ -159,25 +151,29 @@
 .recommend .before::before {
   content: "Before";
   position: absolute;
+  top: 5px;
+  left: 5px;
   background-color: #a7a7a75c;
   color: black;
   padding: 5px 10px;
   border-radius: 53%;
-  left: 23%;
   font-weight: 800;
   border: 2px solid #a116d259;
   font-size: 12px;
+  z-index: 1;
 }
 
 .recommend .after::after {
   content: "After";
   position: absolute;
   background-color: #a7a7a75c;
+  top: 5px;
+  right: 5px;
   color: black;
   padding: 5px 10px;
   border-radius: 53%;
-  left: 68%;
   font-weight: 800;
   border: 2px solid #a116d259;
   font-size: 12px;
+  z-index: 1;
 }
