--- a/src/components/model/recommendations/Recommendations.css
+++ b/src/components/model/recommendations/Recommendations.css
@@ -30,13 +30,12 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 20px;
   margin-top: 20px;
 }
 
 .recommendations-container .recommendations select {
   width: 100%;
-  height: 32px;
   padding: 4px 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -49,8 +48,7 @@
 
   &:focus {
     outline: none;
-    border-color: var(--main-color);
-    box-shadow: 0 0 8px rgba(255, 64, 31, 0.5);
+    box-shadow: 0 0 8px rgba(33, 150, 243, 0.5);
   }
 
   option {
@@ -58,6 +56,23 @@
     line-height: 1.5;
     color: #555;
     background-color: #fff;
+  }
+}
+
+.recommendations-container .recommendations .prompt-input {
+  padding: 4px 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+  &:focus {
+    outline: none;
+    box-shadow: 0 0 8px rgba(33, 150, 243, 0.5);
   }
 }
 
