--- a/src/components/model/recommendations/Recommendations.css
+++ b/src/components/model/recommendations/Recommendations.css
@@ -5,9 +5,15 @@
   box-shadow: 0 0 20px 10px lightgrey;
   border-radius: 10px;
   position: relative;
-  width: 1100px;
+  width: 100%;
   margin: 0 auto;
-  max-height: 552px;
+}
+
+@media (max-width: 900px) {
+  .recommendations-container {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .recommendations-container .image {
@@ -32,6 +38,8 @@
   flex-direction: column;
   gap: 20px;
   margin-top: 20px;
+  width: 100%;
+  max-height: 500px;
 }
 
 .recommendations-container .recommendations select {
