--- a/src/components/model/selectImage/selectImage.css
+++ b/src/components/model/selectImage/selectImage.css
@@ -1,6 +1,7 @@
 .upload {
   width: 500px;
   height: 450px;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
