--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -30,14 +30,18 @@ header .container .info {
 header .container .info h1 {
   font-size: 26px;
   color: var(--DarkPurple);
-  width: 80%;
+  width: 70%;
 }
 
 header .container .info p {
-  width: 80%;
+  width: 70%;
   font-size: 20px;
   margin-top: 45px;
-  font-family: auto;
+
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+
   line-height: 1.6;
 }
 
